<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fltitulo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#3F51B5">

        <TextView
            android:id="@+id/tvtitulo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cabecera"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="70sp"/>

    </FrameLayout>


    <EditText
        android:id="@+id/etnombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias="0.3"
        android:hint="Nombre"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etapellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:hint="Apellido"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etnumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:hint="Móvil"
        android:inputType="phone"
        android:textAlignment="center"/>


    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85">


        <RadioButton
            android:id="@+id/rbhombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbhombre"
            android:checked="true"
            android:onClick="comprobarRadioButton"/>

        <RadioButton
            android:id="@+id/rbmujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbmujer"
            android:onClick="comprobarRadioButton"/>

    </RadioGroup>


    <Button
        android:id="@+id/btnreset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resetear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnenviar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"/>

    <Button
        android:id="@+id/btnenviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnreset"
        android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>